--- a/action.yml
+++ b/action.yml
@@ -44,6 +44,8 @@ runs:
           echo "Buiding container: $container"
           pushd "${{ inputs.directory }}/$container/"
           docker build -t "${{ inputs.repo }}/$container" .
+          syft scan "${{ inputs.repo }}/$container" > sbom.json
+          ls -lh sbom.json
           docker push "${{ inputs.repo }}/$container"
           popd
         done
