--- a/action.yml
+++ b/action.yml
@@ -39,7 +39,6 @@ runs:
       env:
         CONTAINER_JSON: ${{ steps.get-containers.outputs.containers }}
       run: |
-        REMOTE_DIGEST=$(docker buildx imagetools inspect "$CONTAINER_NAME" --format '{{json .Manifest.Digest}}')
         set -e
         echo $CONTAINER_JSON | jq -r '.[]' | while read -r container; do
           CONTAINER_NAME="${{ inputs.repo }}/$container"
@@ -56,7 +55,7 @@ runs:
             --certificate-oidc-issuer=https://github.com/login/oauth \
             --type https://spdx.dev/Document \
             --certificate-identity=emailaddress@emailprovider.com \
-            $DIGEST | \
+            "$CONTAINER_NAME" | \
             jq -r .payload | \
             base64 -d | jq .predicate > existing-sbom.json
           ls -l existing-sbom.json
@@ -69,10 +68,9 @@ runs:
           if [ $DIFFERENCE -eq 0 ]; then
             echo Difference detected. Pushing image "$CONTAINER_NAME"
             docker push "$CONTAINER_NAME"
-            DIGEST=$(docker inspect "$CONTAINER_NAME" |jq -c 'first'| jq .RepoDigests | jq -c 'first' | tr -d '"')
             cosign attest --type spdxjson \
-              --predicate example-image.spdx.json \
-              $DIGEST
+              --predicate sbom.json \
+              "$CONTAINER_NAME"
           fi
           popd
         done
