--- a/action.yml
+++ b/action.yml
@@ -53,7 +53,8 @@ runs:
           DIFFERENCE=0
           set +e
           cosign verify-attestation \
-            --certificate-oidc-issuer=https://github.com/login/oauth \
+            --certificate-identity "https://github.com/kfox1111/testing-repo/.github/workflows/main.yml@refs/heads/main" \
+            --certificate-oidc-issuer "https://token.actions.githubusercontent.com" \
             --type https://spdx.dev/Document \
             --certificate-identity=emailaddress@emailprovider.com \
             "$CONTAINER_NAME" | \
