--- a/action.yml
+++ b/action.yml
@@ -39,14 +39,18 @@ runs:
       env:
         CONTAINER_JSON: ${{ steps.get-containers.outputs.containers }}
         COSIGN_YES: "true"
+        OS: linux
       run: |
         set -e
+        MAINTAG=latest
+        DATETAG=$(date -u +"%Y%m%d-%H%M%S")
+        FINALTAG="$OS-$ARCH-$DATETAG"
         echo $CONTAINER_JSON | jq -r '.[]' | while read -r container; do
           CONTAINER_NAME="${{ inputs.repo }}/$container"
           echo "Buiding container: $container"
           pushd "${{ inputs.directory }}/$container/"
-          docker build -t "$CONTAINER_NAME" .
-          syft scan "$CONTAINER_NAME" -o spdx-json > sbom.json
+          docker build -t "$CONTAINER_NAME:$FINALTAG" .
+          syft scan "$CONTAINER_NAME:$FINALTAG" -o spdx-json > sbom.json
           ls -lh sbom.json
 
           # Bash style truth
@@ -56,7 +60,7 @@ runs:
             --certificate-identity "https://github.com/kfox1111/testing-repo/.github/workflows/main.yml@refs/heads/main" \
             --certificate-oidc-issuer "https://token.actions.githubusercontent.com" \
             --type https://spdx.dev/Document \
-            "$CONTAINER_NAME" | \
+            "$CONTAINER_NAME:$MAINTAG" | \
             jq -r .payload | \
             base64 -d | jq .predicate > existing-sbom.json
           ls -l existing-sbom.json
@@ -67,13 +71,15 @@ runs:
           fi
           set -e
           if [ $DIFFERENCE -eq 0 ]; then
-            echo Difference detected. Pushing image "$CONTAINER_NAME"
-            docker push "$CONTAINER_NAME"
+            echo Difference detected. Pushing image "$CONTAINER_NAME:$FINALAG"
+            docker tag "$CONTAINER_NAME:$FINALTAG" "$CONTAINER_NAME:$MAINTAG"
+            docker push "$CONTAINER_NAME:$FINALTAG"
             cosign attest --type spdxjson \
               --predicate sbom.json \
               "$CONTAINER_NAME"
+            docker push "$CONTAINER_NAME:$MAINTAG"
           else
-            echo No difference detected in "$CONTAINER_NAME"
+            echo No difference detected in "$CONTAINER_NAME:$FINALTAG"
           fi
           popd
         done
