--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -5,7 +5,24 @@ on:
     #inputs:
 
 jobs:
+  timestamp:
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Build timestamp
+        run: |
+          set -e
+          DATETAG=$(date -u +"%Y%m%d-%H%M%S")
+          echo "$DATETAG"
+          echo "$DATETAG" > timestamp.txt
+      - name: Upload result
+        uses: actions/upload-artifact@v4
+        with:
+          name: timestamp
+          path: timestamp
+
   build:
+    needs: timestamp
+
     permissions:
       contents: read
       packages: write
@@ -69,7 +86,9 @@ jobs:
           path: result-${{ matrix.os }}-${{ matrix.arch }}.json
 
   combine:
-    needs: build
+    needs:
+    - timestamp
+    - build
     permissions:
       contents: read
       packages: write
@@ -79,6 +98,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Download timestamp
+        uses: actions/download-artifact@v4
+        with:
+          path: all-results
+          pattern: timestamp.txt
 
       - name: Download ALL results
         uses: actions/download-artifact@v4
@@ -92,3 +117,35 @@ jobs:
           for x in all-results/*; do
             jq -r .[] $x
           done | uniq
+
+      - name: Get directory list
+        id: get-containers
+        shell: bash
+        run: |
+          TARGET_DIR="${{ inputs.directory }}"
+        
+          # Check if directory exists to avoid silent failure
+          if [ ! -d "$TARGET_DIR" ]; then
+            echo "::error::Directory $TARGET_DIR does not exist."
+            exit 1
+          fi
+
+          # Find folders, format as JSON array ["dir1", "dir2"]
+          DIRS=$(find "$TARGET_DIR" -maxdepth 1 -mindepth 1 -type d -printf '"%f",' | sed 's/,$//')
+        
+          echo "containers=[$DIRS]" >> $GITHUB_OUTPUT
+
+      - name: Safe Iterate JSON array
+        id: build
+        shell: bash
+        env:
+          CONTAINER_JSON: ${{ steps.get-containers.outputs.containers }}
+          COSIGN_YES: "true"
+        run: |
+          set -e
+          MAINTAG="latest"
+          DATETAG=$(cat timestamp.txt)
+          while read -r container; do
+            CONTAINER_NAME="${{ inputs.repo }}/$container"
+            echo "Buiding container: $container"
+          done
