--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Upload result
         uses: actions/upload-artifact@v4
         with:
-          name: timestamp
-          path: timestamp
+          name: timestamp.txt
+          path: timestamp.txt
 
   build:
     needs: timestamp
@@ -42,6 +42,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Download timestamp
+        uses: actions/download-artifact@v4
+        with:
+          pattern: timestamp.txt
 
       - name: Log in to GHCR
         uses: docker/login-action@v3.7.0
@@ -102,7 +107,6 @@ jobs:
       - name: Download timestamp
         uses: actions/download-artifact@v4
         with:
-          path: all-results
           pattern: timestamp.txt
 
       - name: Download ALL results
