--- a/action.yml
+++ b/action.yml
@@ -31,7 +31,10 @@ runs:
       shell: bash
       run: |
         TARGET_DIR="${{ inputs.directory }}"
-        
+        if [ -z "$TARGET_DIR"]; then
+          TARGET_DIR="containers"
+        fi
+
         # Check if directory exists to avoid silent failure
         if [ ! -d "$TARGET_DIR" ]; then
           echo "::error::Directory $TARGET_DIR does not exist."
